# mdview

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  mdview-plan.md  package-lock.json  test-links.md  test.md
docs/: BUILDING.md  PACKAGING.md  architecture.md  design-decisions.md
docs/steps/: step-01-bootstrap.md  step-02-licensing.md  step-03-core-types.md  step-04-loader.md  step-05-parsing.md  step-06-commands.md  step-07-cli.md  step-08-frontend.md  step-09-native-menus.md  step-10-search-copy-zoom.md  step-11-links-toc.md  step-12-packaging.md  step-13-licenses.md  step-14-polish.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/styles/: app.css
frontend/src/ui/: layout.ts  search.ts  toc.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  commands.rs  history.rs  main.rs  menu.rs  state.rs
src-tauri/src/md/: loader.rs  mod.rs  parser.rs  toc.rs
