[package]
name = "mdview"
version = "0.1.0"
description = "A lightweight cross-platform Markdown viewer"
authors = ["David Eidelman"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
comrak = "0.30"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
